fixed timeline scrollbars

--- a/src/App.scss
+++ b/src/App.scss
@@ -494,6 +494,12 @@ a {
       border-left: 10px solid #77f;
     }
   }
+
+  .clip-editor,
+  .time-display {
+    display: block;
+    position: absolute;
+  }
 }
 
 .time-background,
